Update custom-style.scss - Fix blurry GIFs in Safari

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -96,7 +96,7 @@ body {
     }
 
     .markdown-preview-view img, .markdown-rendered img {
-        image-rendering: unset;
+        image-rendering: auto !important;
     }
     
 }
